attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743420114106.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[ 66%] Built target ai_language_lib
[ 83%] Building CXX object CMakeFiles/ai_lang.dir/ai_lang.cpp.o
/home/runner/workspace/ai_language/ai_lang.cpp: In member function ‘void ai_language::Interpreter::interpretLine(const std::string&)’:
/home/runner/workspace/ai_language/ai_lang.cpp:323:22: error: ‘std::this_thread’ has not been declared
  323 |                 std::this_thread::sleep_for(std::chrono::milliseconds(300));
      |                      ^~~~~~~~~~~
/home/runner/workspace/ai_language/ai_lang.cpp:323:50: error: ‘std::chrono’ has not been declared
  323 |                 std::this_thread::sleep_for(std::chrono::milliseconds(300));
      |                                                  ^~~~~~
/home/runner/workspace/ai_language/ai_lang.cpp:370:74: error: ‘setprecision’ is not a member of ‘std’
  370 |    std::cout << GREEN << "Accuracy: " << std::fixed << std::setprecision(2) << accuracy << "%" << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:9:1: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
    8 | #include <random>
  +++ |+#include <iomanip>
    9 | 
/home/runner/workspace/ai_language/ai_lang.cpp:379:70: error: ‘setprecision’ is not a member of ‘std’
  379 |        std::cout << GREEN << "Loss: " << std::fixed << std::setprecision(4) << loss << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:379:70: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:514:71: error: ‘setprecision’ is not a member of ‘std’
  514 |   std::cout << BLUE << "  Accuracy: " << std::fixed << std::setprecision(2) << accuracy << "%" << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:514:71: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:515:67: error: ‘setprecision’ is not a member of ‘std’
  515 |       std::cout << BLUE << "  Loss: " << std::fixed << std::setprecision(4) << loss << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:515:67: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:518:76: error: ‘setprecision’ is not a member of ‘std’
  518 |  std::cout << BLUE << "  Precision: " << std::fixed << std::setprecision(2) << precision << "%" << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:518:76: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:519:73: error: ‘setprecision’ is not a member of ‘std’
  519 |     std::cout << BLUE << "  Recall: " << std::fixed << std::setprecision(2) << recall << "%" << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:519:73: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:520:75: error: ‘setprecision’ is not a member of ‘std’
  520 |   std::cout << BLUE << "  F1 Score: " << std::fixed << std::setprecision(2) << f1_score << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:520:75: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:524:81: error: ‘setprecision’ is not a member of ‘std’
  524 | :cout << BLUE << "  Average Reward: " << std::fixed << std::setprecision(2) << precision << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:524:81: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:526:79: error: ‘setprecision’ is not a member of ‘std’
  526 | d::cout << BLUE << "  Success Rate: " << std::fixed << std::setprecision(2) << recall << "%" << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:526:79: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
/home/runner/workspace/ai_language/ai_lang.cpp:644:72: error: ‘setprecision’ is not a member of ‘std’
  644 |  std::cout << GREEN << "Prediction: " << std::fixed << std::setprecision(2) << prediction << RESET << std::endl;
      |                                                             ^~~~~~~~~~~~

/home/runner/workspace/ai_language/ai_lang.cpp:644:72: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
make[2]: *** [CMakeFiles/ai_lang.dir/build.make:76: CMakeFiles/ai_lang.dir/ai_lang.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:112: CMakeFiles/ai_lang.dir/all] Error 2
make: *** [Makefile:91: all] Error 2